--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1576,6 +1576,10 @@
     <string name="pref_use_dithering_title">Surface dithering</string>
     <string name="pref_use_dithering_summary">Dithering improves image quality on some displays at the cost of performance (requires reboot)</string>
 
+    <!-- Performance Settings : Proximity -->
+    <string name="pref_proximity_disable_title">Proximity detection</string>
+    <string name="pref_proximity_disable_summary">Automatically turn screen off when sensors are covered, usually during a standard call</string>
+
     <!-- Performance Settings : 16bpp Alpha -->
     <string name="pref_use_16bpp_alpha_title">16bit transparency</string>
     <string name="pref_use_16bpp_alpha_summary">Better graphics performance, but lower quality and may cause visual artifacts (requires reboot)</string>
