--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4327,7 +4327,7 @@ found in the list of installed apps.</string>
     <!-- Sound & display settings screen, compatibility mode option summary text when check box is selected -->
     <string name="compatibility_mode_summary_off">Run apps in Compatibility mode. This require rebooting.</string>
     <!-- Sound & display settings screen, compatibility mode option summary text when check box is clear -->
-    <string name="compatibility_mode_summary_on">Turn off compatibility mode to allow app layouts</string>
+    <string name="compatibility_mode_summary_on">Turn off compatibility mode to allow app layouts.</string>
 
     <string name="dual_pane_title">Dual-panel layout</string>
     <string name="dual_pane_summary">Side-by-side display for apps that provide a dual-pane option</string>
@@ -4345,6 +4345,6 @@ found in the list of installed apps.</string>
     <!-- Wakeup options -->
     <string name="display_category_wakeup_options_title">Wakeup options</string>
     <string name="pref_volume_wake_title">Volume rocker wake</string>
-    <string name="pref_volume_wake_summary">Pressing the volume up/down wakes the device. Intended for devices with hard to press power key</string>
+    <string name="pref_volume_wake_summary">Pressing the volume up/down wakes the device.</string>
 
 </resources>
