--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -814,6 +814,14 @@
     <string name="pref_tiled_rendering_title">Tile Rendering</string>
     <string name="pref_tiled_rendering_summary">Process the screen as individual blocks running in async</string>
 
+    <string name="pref_comp_type_title">Composition Type</string>
+    <string name="pref_comp_type_summary">Choose the rendering style for the qualcomm display composition</string>
+
+    <string name="pref_c2d_composition">C2D</string>
+    <string name="pref_dyn_composition">DYN</string>
+    <string name="pref_gpu_composition">GPU</string>
+    <string name="pref_mdp_composition">MDP</string>
+
     <string name="pref_proximity_disable_title">Proximity detection</string>
     <string name="pref_proximity_disable_summary">Automatically turn screen off when sensors are covered, usually during a standard call</string>
 
